# Time_reports

./: .gitignore  LICENSE  Pruebas.py  README.md  buildozer.spec  config.py  datos.py  estilos.py  flet.yaml  main.py  models.py  municipios.json  operadores.json  pyproject.toml  requeriments.txt  setup.py  styles.py  test_models.py  ui_components  ui_components.py  user_config.json  utils.py
src/: alarm_manager.py  alarms.py  config.py  main.py  models.py  notifications.py  service.py  styles.py  ui_components.py
src/services/: alarm_service.py  boot_service.py  notification_service.py
